--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "guzzlehttp/guzzle": "^6.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": "^5.0",
+        "keboola/storage-api-client": "^3.3"
     },
     "autoload": {
         "psr-4": {
