--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,13 @@ tests:
   volumes:
     - ./:/code
   working_dir: /code
+  environment:
+    - KBC_MANAGE_API_URL
+    - KBC_MANAGE_API_TOKEN
+    - KBC_SUPER_API_TOKEN
+    - KBC_TEST_MAINTAINER_ID
+    - KBC_TEST_ADMIN_EMAIL
+    - KBC_TEST_ADMIN_TOKEN
   command: >
            sh -c '
            composer install
