--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,16 @@ services:
       - KBC_TEST_ADMIN_TOKEN
       - KBC_TEST_ADMIN_WITH_MFA_EMAIL
       - KBC_TEST_ADMIN_WITH_MFA_TOKEN
+      - TEST_ABS_ACCOUNT_KEY
+      - TEST_ABS_ACCOUNT_NAME
+      - TEST_ABS_CONTAINER_NAME
+      - TEST_ABS_ROTATE_ACCOUNT_KEY
+      - TEST_AWS_ROTATE_KEY
+      - TEST_AWS_ROTATE_SECRET
+      - TEST_AWS_FILES_BUCKET
+      - TEST_AWS_KEY
+      - TEST_AWS_REGION
+      - TEST_AWS_SECRET
     command: >
          sh -c '
          composer install
