--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,17 @@ services:
       - KBC_TEST_MAINTAINER_ID
       - KBC_TEST_ADMIN_EMAIL
       - KBC_TEST_ADMIN_TOKEN
+      - ABCD
+      - TEST_ABS_ACCOUNT_KEY
+      - TEST_ABS_ACCOUNT_NAME
+      - TEST_ABS_CONTAINER_NAME
+      - TEST_ABS_ROTATE_ACCOUNT_KEY
+      - TEST_AWS_ROTATE_KEY
+      - TEST_AWS_ROTATE_SECRET
+      - TEST_AWS_FILES_BUCKET
+      - TEST_AWS_KEY
+      - TEST_AWS_REGION
+      - TEST_AWS_SECRET
     command: >
          sh -c '
          composer install
