Comments to env.dist

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,4 @@
+#REQUIRED - must be filled before running any test
 KBC_MANAGE_API_URL=
 KBC_MANAGE_API_TOKEN=
 KBC_SUPER_API_TOKEN=
@@ -7,11 +8,11 @@ KBC_TEST_ADMIN_TOKEN=
 KBC_TEST_ADMIN_WITH_MFA_EMAIL=
 KBC_TEST_ADMIN_WITH_MFA_TOKEN=
 
+# OPTIONAL - required only for running file storage test (tests is skipped by default)
 TEST_ABS_ACCOUNT_KEY=
 TEST_ABS_ACCOUNT_NAME=
 TEST_ABS_CONTAINER_NAME=
 TEST_ABS_ROTATE_ACCOUNT_KEY=
-
 TEST_AWS_ROTATE_KEY=
 TEST_AWS_ROTATE_SECRET=
 TEST_AWS_FILES_BUCKET=
