--- a/.env.dist
+++ b/.env.dist
@@ -8,6 +8,8 @@ KBC_TEST_ADMIN_TOKEN=
 KBC_TEST_ADMIN_WITH_MFA_EMAIL=
 KBC_TEST_ADMIN_WITH_MFA_TOKEN=
 
+ENABLE_DEV_TESTS=0
+
 # OPTIONAL - required only for running file storage test (tests is skipped by default)
 TEST_ABS_ACCOUNT_KEY=
 TEST_ABS_ACCOUNT_NAME=
