--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 script:
  - docker-compose build tests
  - docker network create connection_api-tests
- - docker-compose run --rm app composer ci
+ - docker-compose run --rm tests composer ci
 
 deploy:
   provider: script
