--- a/.env.dist
+++ b/.env.dist
@@ -10,7 +10,7 @@ KBC_TEST_ADMIN_WITH_MFA_TOKEN=
 
 ENABLE_DEV_TESTS=0
 
-# OPTIONAL - required only for running file storage test (tests is skipped by default)
+# OPTIONAL - required only for running file storage test (tests are skipped by default)
 TEST_ABS_ACCOUNT_KEY=
 TEST_ABS_ACCOUNT_NAME=
 TEST_ABS_CONTAINER_NAME=
