Remove RUN_DEV_TESTS

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,6 +4,8 @@
     <testsuites>
         <testsuite>
             <directory>tests</directory>
+            <exclude>tests/FileStorageAbsTest.php</exclude>
+            <exclude>tests/FileStorageS3Test.php</exclude>
         </testsuite>
     </testsuites>
     <filter>
