--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ services:
   - docker
 
 script:
- - docker-compose build tests
+ - docker-compose build dev
  - docker network create connection_api-tests
- - docker-compose run --rm tests composer ci
+ - docker-compose run --rm dev composer ci
 
 deploy:
   provider: script
