--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - KBC_TEST_ADMIN_WITH_MFA_EMAIL
       - KBC_TEST_ADMIN_WITH_MFA_TOKEN
       - TEST_ABS_ACCOUNT_KEY
+      - TEST_ABS_REGION
       - TEST_ABS_ACCOUNT_NAME
       - TEST_ABS_CONTAINER_NAME
       - TEST_ABS_ROTATE_ACCOUNT_KEY
