Rename docker-compose service to app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
          composer install
          && ./vendor/bin/phpunit
          '
-  dev:
+  app:
     build:
       context: .
       target: dev
