--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ services:
   - docker
 
 script:
- - docker-compose build dev
+ - docker-compose build app
  - docker network create connection_api-tests
- - docker-compose run --rm dev composer ci
+ - docker-compose run --rm app composer ci
 
 deploy:
   provider: script
