--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ services:
   - docker
 
 script:
- - docker-compose build dev
+ - docker-compose build release
  - docker network create connection_api-tests
- - docker-compose run --rm dev
+ - docker-compose run --rm release composer ci
 
 deploy:
   provider: script
