revert docker-composer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       - ./:/code
     environment:
       - ENABLE_DEV_TESTS
-      - KBC_MANAGE_API_URL=http://192.168.1.213:8800/
-      - KBC_MANAGE_API_TOKEN=2-QV2rULahWcXijBNsLdrjKGNml0AIfG4WbEdi8v8A
-      - KBC_SUPER_API_TOKEN=4-DYrVXfnpQ3QkqX0uEqpUcHc1TsUas4n6kToLJw8a
-      - KBC_TEST_MAINTAINER_ID=1
+      - KBC_MANAGE_API_URL
+      - KBC_MANAGE_API_TOKEN
+      - KBC_SUPER_API_TOKEN
+      - KBC_TEST_MAINTAINER_ID
       - KBC_TEST_ADMIN_EMAIL
-      - KBC_TEST_ADMIN_TOKEN=2-QV2rULahWcXijBNsLdrjKGNml0AIfG4WbEdi8v8A
+      - KBC_TEST_ADMIN_TOKEN
       - KBC_TEST_ADMIN_WITH_MFA_EMAIL
       - KBC_TEST_ADMIN_WITH_MFA_TOKEN
       - TEST_ABS_ACCOUNT_KEY
