--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ENABLE_DEV_TESTS
       - KBC_MANAGE_API_URL
       - KBC_MANAGE_API_TOKEN
+      - KBC_MANAGE_API_SUPER_TOKEN_WITH_UI_MANAGE_SCOPE
       - KBC_SUPER_API_TOKEN
       - KBC_TEST_MAINTAINER_ID
       - KBC_TEST_ADMIN_EMAIL
