--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
         "guzzlehttp/guzzle": "^6.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0",
+        "phpunit/phpunit": "^7.0",
         "keboola/storage-api-client": "^7.0",
-        "keboola/coding-standard": "^8.0"
+        "keboola/coding-standard": "^8.0",
+        "brianium/paratest": "2.*"
     },
     "autoload": {
         "psr-4": {
