--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require-dev": {
         "phpunit/phpunit": "^7.0",
         "keboola/storage-api-client": "^7.0",
-        "keboola/coding-standard": "^8.0"
+        "keboola/coding-standard": "^8.0",
+        "brianium/paratest": "2.*"
     },
     "autoload": {
         "psr-4": {
