add new admin user env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - KBC_TEST_MAINTAINER_ID
       - KBC_TEST_ADMIN_EMAIL
       - KBC_TEST_ADMIN_TOKEN
+      - KBC_TEST_ADMIN2_TOKEN
       - KBC_TEST_ADMIN_WITH_MFA_EMAIL
       - KBC_TEST_ADMIN_WITH_MFA_TOKEN
       - TEST_ABS_ACCOUNT_KEY
