continue with separating storageBackend test and add new test for create and delete storageBackend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,11 @@ services:
       - TEST_S3_SECRET
       - SUITE_NAME
       - TRAVIS_BUILD_ID
+      - KBC_TEST_SNOWFLAKE_HOST
+      - KBC_TEST_SNOWFLAKE_WAREHOUSE
+      - KBC_TEST_SNOWFLAKE_BACKEND_REGION
+      - KBC_TEST_SNOWFLAKE_BACKEND_NAME
+      - KBC_TEST_SNOWFLAKE_BACKEND_PASSWORD
 
   dev-xdebug:
     <<: *dev-config
