--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 sudo: required
 
-language: bash
-
 services:
   - docker
 
+env:
+  - PHP_VERSION=7.1
+  - PHP_VERSION=8.0
+
 script:
- - docker-compose build release
+ - docker-compose build --build-arg PHP_VERSION=$PHP_VERSION release
  - docker network create connection_api-tests
  - docker-compose run --rm release composer ci
 
