--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "keboola/kbc-manage-api-php-client",
     "description": "Keboola Management API Client",
     "require": {
-        "php" : "^7.1",
+        "php" : "^7.1|^8.0",
         "guzzlehttp/guzzle": "^6.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^7.0|^8.0",
         "keboola/storage-api-client": "^7.0",
-        "keboola/coding-standard": "^8.0"
+        "keboola/coding-standard": "^13.0"
     },
     "autoload": {
         "psr-4": {
@@ -32,5 +32,9 @@
             "name": "Martin Halamicek",
             "email": "martin@keboola.com"
         }
-    ]
+    ],
+    "config": {
+        "sort-packages": true,
+        "lock": false
+    }
 }
