--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
  - docker-compose build --build-arg PHP_VERSION=$PHP_VERSION release$PHP_VERSION
  - docker network create connection_api-tests
  - docker-compose run --rm release composer ci
+ - docker images
 
 deploy:
   - provider: script
