--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ env:
 
 script:
  - echo $PHP_VERSION
- - docker-compose build --build-arg PHP_VERSION=$PHP_VERSION release$PHP_VERSION
+ - docker-compose build --build-arg PHP_VERSION=$PHP_VERSION release
+ - docker tag keboola/manage-api-tests:latest keboola/manage-api-tests:release$PHP_VERSION
  - docker network create connection_api-tests
  - docker-compose run --rm release composer ci
  - docker images
