--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
         "guzzlehttp/guzzle": "^6.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0|^8.0",
+        "keboola/coding-standard": "^13.0",
         "keboola/storage-api-client": "^7.0",
-        "keboola/coding-standard": "^13.0"
+        "phpunit/phpunit": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
