--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,6 @@ sudo: required
 services:
   - docker
 
-env:
-  -
-  - PHP_VERSION=7.2
-  - PHP_VERSION=7.3
-  - PHP_VERSION=7.4
-  - PHP_VERSION=8.0
-
 script:
  - echo $PHP_VERSION
  - docker-compose build --build-arg PHP_VERSION=$PHP_VERSION release
@@ -18,16 +11,16 @@ script:
  - docker-compose run --rm release composer ci
  - docker images
 
-deploy:
-  - provider: script
-    skip_cleanup: true
-    script: ./deploy.sh
-    on:
-      branch: master
-      condition: $PHP_VERSION =~ ^$
-  - provider: script
-    skip_cleanup: true
-    script: ./deploy-tag.sh
-    on:
-      tags: true
-      condition: $TRAVIS_TAG =~ ^test- AND $PHP_VERSION =~ ^$
+jobs:
+  include:
+    - stage: build and tests
+      name: PHP7.1
+      env: PHP_VERSION=
+    - name: PHP7.2
+      env: PHP_VERSION=7.2
+    - name: PHP7.3
+      env: PHP_VERSION=7.3
+    - name: PHP7.4
+      env: PHP_VERSION=7.4
+    - name: PHP8.0
+      env: PHP_VERSION=8.0
