--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -12,16 +12,16 @@ jobs:
       fail-fast: false
       matrix:
         php_version:
-          - ''
+          - '7.1'
           - '7.2'
           - '7.3'
-          - '7.4'
+          - '' # default - see Dockerfile
           - '8.0'
     steps:
       - uses: actions/checkout@v2
       - run: |
-          echo "PHP version: ${{ matrix.php_version }}"
           docker-compose build --build-arg PHP_VERSION=${{ matrix.php_version }} release
+          docker-compose run --rm release php -v
           docker tag keboola/manage-api-tests:latest keboola/manage-api-tests:release${{ matrix.php_version }}
           docker network create connection_api-tests
           docker-compose run --rm release composer ci
