--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -23,6 +23,6 @@ jobs:
           docker-compose build --build-arg PHP_VERSION=${{ matrix.php_version }} release
           docker network create connection_api-tests
           docker-compose run --rm release php -v
-          docker tag keboola/manage-api-tests:latest keboola/manage-api-tests:release${{ matrix.php_version }}
           docker-compose run --rm release composer ci
-      - run: docker images
+      - name: List images
+        run: docker images
