Add missing quay.io prefix

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Tag and push to quay.io
         run: |
           TAG="${GITHUB_REF##*/}"
-          docker tag keboola/manage-api-tests:latest keboola/manage-api-tests:$TAG
+          docker tag keboola/manage-api-tests:latest quay.io/keboola/manage-api-tests:$TAG
           docker push quay.io/keboola/manage-api-tests:$TAG
