KBC-2519 allow scoped super token to see project detail

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - KBC_MANAGE_API_URL
       - KBC_MANAGE_API_TOKEN
       - KBC_MANAGE_API_SUPER_TOKEN_WITH_UI_MANAGE_SCOPE
+      - KBC_MANAGE_API_SUPER_TOKEN_WITH_PROJECTS_READ_SCOPE
+      - KBC_MANAGE_API_SUPER_TOKEN_WITHOUT_SCOPES
       - KBC_SUPER_API_TOKEN
       - KBC_TEST_MAINTAINER_ID
       - KBC_TEST_ADMIN_EMAIL
