KBC-2578 allow scoped super token to see deleted project detail

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - KBC_MANAGE_API_TOKEN
       - KBC_MANAGE_API_SUPER_TOKEN_WITH_UI_MANAGE_SCOPE
       - KBC_MANAGE_API_SUPER_TOKEN_WITH_PROJECTS_READ_SCOPE
+      - KBC_MANAGE_API_SUPER_TOKEN_WITH_DELETED_PROJECTS_READ_SCOPE
       - KBC_MANAGE_API_SUPER_TOKEN_WITHOUT_SCOPES
       - KBC_SUPER_API_TOKEN
       - KBC_TEST_MAINTAINER_ID
