remove vcs and use keboola/phpunit-retry-annotations

--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,17 @@
 {
     "name": "keboola/kbc-manage-api-php-client",
     "description": "Keboola Management API Client",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/keboola/phpunit-retry-annotations"
-        }
-    ],
     "require": {
         "php" : "^7.1|^8.0",
         "guzzlehttp/guzzle": "^7.0|^6.1"
     },
     "require-dev": {
         "keboola/coding-standard": "^13.0",
+        "keboola/phpunit-retry-annotations": "^0.3.0",
         "keboola/storage-api-client": "^12.0",
         "phpstan/phpstan": "^0.12.94",
         "phpstan/phpstan-phpunit": "^0.12.22",
-        "phpunit/phpunit": "^7.0|^8.0",
-        "bshaffer/phpunit-retry-annotations": "dev-master"
+        "phpunit/phpunit": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
