--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -11,12 +11,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php_version:
-          - '7.1'
-          - '7.2'
-          - '7.3'
-          - '' # default - see Dockerfile
+        php-versions:
+          - '7.4'
           - '8.0'
+          - '8.1'
+        include:
+          - php-versions: "8.1"
+            composer-options: "--ignore-platform-reqs"
+            experimental: true
     steps:
       - uses: actions/checkout@v2
       - run: |
