--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,9 @@ services:
       - TEST_ABS_ACCOUNT_NAME
       - TEST_ABS_CONTAINER_NAME
       - TEST_ABS_ROTATE_ACCOUNT_KEY
+      - TEST_GCS_KEY_FILE
+      - TEST_GCS_FILES_BUCKET
+      - TEST_GCS_REGION
       - TEST_S3_ROTATE_KEY
       - TEST_S3_ROTATE_SECRET
       - TEST_S3_FILES_BUCKET
