--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - TEST_ABS_CONTAINER_NAME
       - TEST_ABS_ROTATE_ACCOUNT_KEY
       - TEST_GCS_KEY_FILE
+      - TEST_GCS_KEY_FILE_ROTATE
       - TEST_GCS_FILES_BUCKET
       - TEST_GCS_REGION
       - TEST_S3_ROTATE_KEY
