--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
       - TEST_ABS_ACCOUNT_NAME
       - TEST_ABS_CONTAINER_NAME
       - TEST_ABS_ROTATE_ACCOUNT_KEY
-      - TEST_GCS_KEY_FILE
-      - TEST_GCS_KEY_FILE_ROTATE
+      - TEST_GCS_KEYFILE_JSON
+      - TEST_GCS_KEYFILE_ROTATE_JSON
       - TEST_GCS_FILES_BUCKET
       - TEST_GCS_REGION
       - TEST_S3_ROTATE_KEY
