--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,6 +6,7 @@
             <directory>tests</directory>
             <exclude>tests/FileStorageAbsTest.php</exclude>
             <exclude>tests/FileStorageS3Test.php</exclude>
+            <exclude>tests/FileStorageGcsTest.php</exclude>
         </testsuite>
     </testsuites>
     <filter>
