--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -11,18 +11,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions:
+        php-version:
           - '7.4'
           - '8.0'
           - '8.1'
         include:
-          - php-versions: "8.1"
+          - php-version: "8.1"
             composer-options: "--ignore-platform-reqs"
             experimental: true
     steps:
       - uses: actions/checkout@v2
       - run: |
-          docker-compose build --build-arg PHP_VERSION=${{ matrix.php_version }} release
+          docker-compose build --build-arg PHP_VERSION=${{ matrix.php-version }} release
           docker network create connection_api-tests
           docker-compose run --rm release php -v
           docker-compose run --rm release composer ci
