--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,16 +2,79 @@
 <phpunit bootstrap="./tests/bootstrap.php"
          colors="true">
     <testsuites>
-        <testsuite name="Main">
+        <testsuite name="manage-part-1">
             <directory>tests</directory>
+            <!-- exclude file storage tests-->
             <exclude>tests/FileStorageAbsTest.php</exclude>
             <exclude>tests/FileStorageS3Test.php</exclude>
             <exclude>tests/FileStorageGcsTest.php</exclude>
+            <!-- exclude tests covered in part-2 -->
+            <exclude>tests/AssignAdminFeatureTest.php</exclude>
+            <exclude>tests/AssignProjectFeatureTest.php</exclude>
+            <exclude>tests/FeaturesTest.php</exclude>
+            <exclude>tests/MaintainerInvitationsTest.php</exclude>
+            <exclude>tests/MaintainerJoinTest.php</exclude>
+            <exclude>tests/MaintainersTest.php</exclude>
+            <exclude>tests/MaintainersMetadataTest.php</exclude>
+            <exclude>tests/UsersMetadataTest.php</exclude>
+            <exclude>tests/UsersTest.php</exclude>
+            <exclude>tests/tests/UsersMetadataTest.php</exclude>
+            <exclude>tests/ProjectDeleteTest.php</exclude>
+            <exclude>tests/ProjectInvitationsMfaValidationTest.php</exclude>
+            <exclude>tests/ProjectInvitationsTest.php</exclude>
+            <exclude>tests/ProjectJoinMfaValidationTest.php</exclude>
+            <exclude>tests/ProjectJoinRequestsMfaValidationTest.php</exclude>
+            <exclude>tests/ProjectJoinRequestsTest.php</exclude>
+            <exclude>tests/ProjectJoinTest.php</exclude>
+            <exclude>tests/ProjectMembershipRolesTest.php</exclude>
+            <exclude>tests/ProjectMfaValidationTest.php</exclude>
+            <exclude>tests/ProjectTemplateFeaturesAssigningTest.php</exclude>
+            <exclude>tests/ProjectTemplateFeaturesTest.php</exclude>
+            <exclude>tests/ProjectTemplatesTest.php</exclude>
+            <exclude>tests/ProjectWithProtectedDefaultBranchTest.php</exclude>
+            <exclude>tests/OrganizationInvitationsTest.php</exclude>
+            <exclude>tests/OrganizationJoinMfaValidationTest.php</exclude>
+            <exclude>tests/OrganizationJoinTest.php</exclude>
+            <exclude>tests/OrganizationMfaValidationTest.php</exclude>
+            <exclude>tests/OrganizationsMetadataTest.php</exclude>
+            <exclude>tests/OrganizationsTest.php</exclude>
         </testsuite>
         <testsuite name="File Storage">
             <file>tests/FileStorageAbsTest.php</file>
             <file>tests/FileStorageS3Test.php</file>
             <file>tests/FileStorageGcsTest.php</file>
+        </testsuite>
+        <testsuite name="manage-part-2">
+            <!-- list tests which are not covered in part-1 -->
+            <file>tests/UsersMetadataTest.php</file>
+            <file>tests/AssignAdminFeatureTest.php</file>
+            <file>tests/AssignProjectFeatureTest.php</file>
+            <file>tests/FeaturesTest.php</file>
+            <file>tests/MaintainerInvitationsTest.php</file>
+            <file>tests/MaintainerJoinTest.php</file>
+            <file>tests/MaintainersTest.php</file>
+            <file>tests/MaintainersMetadataTest.php</file>
+            <file>tests/UsersMetadataTest.php</file>
+            <file>tests/UsersTest.php</file>
+            <file>tests/ProjectDeleteTest.php</file>
+            <file>tests/ProjectInvitationsMfaValidationTest.php</file>
+            <file>tests/ProjectInvitationsTest.php</file>
+            <file>tests/ProjectJoinMfaValidationTest.php</file>
+            <file>tests/ProjectJoinRequestsMfaValidationTest.php</file>
+            <file>tests/ProjectJoinRequestsTest.php</file>
+            <file>tests/ProjectJoinTest.php</file>
+            <file>tests/ProjectMembershipRolesTest.php</file>
+            <file>tests/ProjectMfaValidationTest.php</file>
+            <file>tests/ProjectTemplateFeaturesAssigningTest.php</file>
+            <file>tests/ProjectTemplateFeaturesTest.php</file>
+            <file>tests/ProjectTemplatesTest.php</file>
+            <file>tests/ProjectWithProtectedDefaultBranchTest.php</file>
+            <file>tests/OrganizationInvitationsTest.php</file>
+            <file>tests/OrganizationJoinMfaValidationTest.php</file>
+            <file>tests/OrganizationJoinTest.php</file>
+            <file>tests/OrganizationMfaValidationTest.php</file>
+            <file>tests/OrganizationsMetadataTest.php</file>
+            <file>tests/OrganizationsTest.php</file>
         </testsuite>
     </testsuites>
     <filter>
