--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,16 +2,31 @@
 <phpunit bootstrap="./tests/bootstrap.php"
          colors="true">
     <testsuites>
-        <testsuite name="Main">
+        <testsuite name="manage-part-1">
             <directory>tests</directory>
+<!--            exclude file storage tests-->
             <exclude>tests/FileStorageAbsTest.php</exclude>
             <exclude>tests/FileStorageS3Test.php</exclude>
             <exclude>tests/FileStorageGcsTest.php</exclude>
+
+<!--            exclude tests which are covered in `manage-part-2`-->
+            <exclude>tests/MaintainersMetadataTest.php</exclude>
+            <exclude>tests/OrganizationsMetadataTest.php</exclude>
+            <exclude>tests/ProjectsMetadataTest.php</exclude>
+            <exclude>tests/UsersMetadataTest.php</exclude>
+            <exclude>tests/PromoCodesTest.php</exclude>
         </testsuite>
         <testsuite name="File Storage">
             <file>tests/FileStorageAbsTest.php</file>
             <file>tests/FileStorageS3Test.php</file>
             <file>tests/FileStorageGcsTest.php</file>
+        </testsuite>
+        <testsuite name="manage-part-2">
+            <file>tests/MaintainersMetadataTest.php</file>
+            <file>tests/OrganizationsMetadataTest.php</file>
+            <file>tests/ProjectsMetadataTest.php</file>
+            <file>tests/UsersMetadataTest.php</file>
+            <file>tests/PromoCodesTest.php</file>
         </testsuite>
     </testsuites>
     <filter>
