--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
         "guzzlehttp/guzzle": "^7.0|^6.1"
     },
     "require-dev": {
-        "phpstan/phpdoc-parser": "1.5.1",
-        "keboola/coding-standard": "^13.0",
+        "phpstan/phpdoc-parser": "^1.24.5",
+        "keboola/coding-standard": "^15.0",
         "keboola/phpunit-retry-annotations": "^0.3.0",
         "keboola/storage-api-client": "^12.0",
         "phpstan/phpstan": "^0.12.94",
