--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,5 @@
 parameters:
+    level: 8
     bootstrapFiles:
         - tests/bootstrap.php
     tmpDir: cache/.phpstan
@@ -8,9 +9,9 @@ parameters:
     checkGenericClassInNonGenericObjectType: false
     ignoreErrors:
         # other
-        - '#Method .* has no return typehint specified#'
-        - '#Property .* has no typehint specified#'
-        - '#Method (.*) has parameter (.*) with no typehint specified.#'
+        - '#Method .* has no return type specified#'
+        - '#Property .* has no type specified#'
+        - '#Method (.*) has parameter (.*) with no type specified.#'
 includes:
     - phpstan-baseline.neon
     - vendor/phpstan/phpstan-phpunit/extension.neon
