--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "phpcs": "phpcs -s -n -p --extensions=php src tests",
         "phpcbf": "phpcbf -s -n -p --extensions=php src tests",
         "phpstan": "phpstan analyse ./src ./tests -c phpstan.neon",
-        "tests": "phpunit"
+        "tests": "phpunit --configuration phpunit.xml.dist --testsuite 'Main'",
+        "tests-file-storage": "phpunit --configuration phpunit.xml.dist --testsuite 'File Storage'"
     },
     "authors": [
         {
