KAB-88 Test org detail and project list with scoped app token

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - KBC_MANAGE_API_SUPER_TOKEN_WITH_DELETED_PROJECTS_READ_SCOPE
       - KBC_MANAGE_API_SUPER_TOKEN_WITHOUT_SCOPES
       - KBC_MANAGE_API_SUPER_TOKEN_WITH_STORAGE_TOKENS_SCOPE
+      - KBC_MANAGE_API_SUPER_TOKEN_WITH_ORGANIZATIONS_READ_SCOPE
       - KBC_SUPER_API_TOKEN
       - KBC_TEST_MAINTAINER_ID
       - KBC_TEST_ADMIN_EMAIL
