--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -22,9 +22,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          docker-compose build --build-arg PHP_VERSION=${{ matrix.php-version }} release
+          docker compose build --build-arg PHP_VERSION=${{ matrix.php-version }} release
           docker network create connection_api-tests
-          docker-compose run --rm release php -v
-          docker-compose run --rm release composer ci
+          docker compose run --rm release php -v
+          docker compose run --rm release composer ci
       - name: List images
         run: docker images
