--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          docker-compose build release
+          docker compose build release
           docker network create connection_api-tests
-          docker-compose run --rm release php -v
-          docker-compose run --rm release composer ci
+          docker compose run --rm release php -v
+          docker compose run --rm release composer ci
       - name: List images
         run: docker images
       - name: Login to quay.io
