--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,10 +50,14 @@ services:
 
   dev-xdebug:
     <<: *dev-config
-    build: docker/xdebug
+    build:
+      context: docker/xdebug
+      args:
+        IMAGE: kbc-manage-api-php-client-dev
     volumes:
       - ./:/code/
       - ./docker/xdebug/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
+
 
 networks:
   default:
