--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "phpstan/phpdoc-parser": "^1.24.5",
         "keboola/coding-standard": "^15.0",
         "keboola/phpunit-retry-annotations": "^0.3.0",
-        "keboola/storage-api-client": "^17.0",
+        "keboola/storage-api-client": "dev-jirka/pat-198-skip-use-schema as 17.0",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-phpunit": "^1",
         "phpunit/phpunit": "^7.0|^8.0",
